--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,10 +7,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-.profile-pic {
-	display:flex;
-	justify-content:center;
-	align-items:center;
+#profile-pic {
 	width:200px;
 	height:200px;
 	border-radius:100px;
